====================
2018/11/4
v 6-0.6

- Changed FFIServices interface to use an array system instead of list. API is different.
- Reduced ForeignFunc to contain only method virtual bool call(FFIServices&).
- Updated ForeignFuncWrapper, CallbackWrapper, and ForeignMethod to follow new FFI.
- Changed EngineMessage::MissingFunctionCallParam to MissingFunctionCallArg.
- Added EngineMessage::BadArgIndexInForeignFunc and EngineMessage::CustomMessage.
- Removed EngineMessage::ForeignFunctionWrongArgCount and EngineMessage::ForeignFunctionBadArg.
- Changed return of NumericObject::absValue() from Object* to NumericObject*. (Makes overrides correct and fixes other issues.)


EngMsgToStr.cpp
- Updated.

Printer.h
- Divided call() into smaller functions.


====================
2018/8/17 - 2018/11/4
v 6-0.522

- Now on branch Feldspar.
- Changed " != REAL_NULL " to "notNull" usages.
- Changed nomenclature:
-- ObjectBool is now BoolObject
-- ObjectString is now StringObject
-- ObjectInteger is now IntegerObject
-- ObjectDecimal is now DecimalNumObject
-- FunctionContainer is now FunctionObject
-- ObjectList is now ListObject
- Created NumericObject parent class, inheriting Object.
-- Added enum value ObjectType::Numeric.
-- Changed IntegerObject to inherit NumericObject.
-- Changed DecimalObject to inherit NumericObject.
- Implemented NumericObject interface for IntegerObject. (Ported basicmath.cpp extension.)
- Implemented NumericObject interface for DecimalNumObject. (Ported basicmath.cpp extension.)
- Added system functions for numeric operations: _equal, _greater_than, _greater_or_equal, _abs, _add, _subtract, _multiply, _divide, modulus, incr, and decr and implemented processing functions for them in the Engine.
- Added String::steal().
- Changed isObjectFunction() to isFunctionObject.
- Changed isObjectEmptyFunction() to isEmptyFunctionObject.
- Changed Engine::process_sys_are_number() to use isNumericObject().